--- a/index.html
+++ b/index.html
@@ -2,15 +2,39 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <link href="main-css.css" rel="stylesheet">
+    <link href="main_section-css.css" rel="stylesheet">
 
 </head>
 
 <body>
-    <h1>Hello world</h1>
+    <input type="checkbox" id="menuicon">
+    <label for="menuicon">
+        <img src="src/img/menu.png" width="80%">
+    </label>
+    <div class="sidebar">
+        <h1>카테고리1</h1>
+        <h1>카테고리2</h1>
+        <h1>카테고리3</h1>
+    </div>
 
-    <p>안녕하세요 개발자 김광일의 github 사이트 입니다.</p>
-    <p>현재 사이트를 만들었고, 2번째 변화를 주었습니다.</p>
+    <section id="main-section">
+        <section id="main-section-1">
+
+        </section>
+        <section id="main-section-2">
+
+        </section>
+    </section>
+    <section id="main-section">
+        <section id="main-section-1">
+
+        </section>
+        <section id="main-section-2">
+
+        </section>
+    </section>
 </body>
 
 </html>
