--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1>카테고리1</h1>
         <h1>카테고리2</h1>
         <h1>카테고리3</h1>
+        <h1>카테고리4</h1>
     </div>
 
     <section id="main-section">
