--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <link href="main-css.css" rel="stylesheet">
-    <link href="main_section-css.css" rel="stylesheet">
+    <head>
+        <meta charset="UTF-8">
+        <link href="main-css.css" rel="stylesheet">
+        <link href="main_section-css.css" rel="stylesheet">
 
-</head>
+    </head>
 
-<body>
-    <input type="checkbox" id="menuicon">
-    <label for="menuicon">
-        <img src="src/img/menu.png" width="80%">
-    </label>
-    <div class="sidebar">
-        <h1>카테고리1</h1>
-        <h1>카테고리2</h1>
-        <h1>카테고리3</h1>
-        <h1>카테고리4</h1>
-    </div>
+    <body>
+        <input type="checkbox" id="menuicon">
+        <label for="menuicon">
+            <img src="src/img/menu.png" width="80%">
+        </label>
+        <div class="sidebar">
+            <h1>카테고리1</h1>
+            <h1>카테고리2</h1>
 
-    <section id="main-section">
-        <section id="main-section-1">
+            <h1>카테고리3</h1>
+            <h1>카테고리4</h1>
+        </div>
 
+        <section id="main-section">
+            <section id="main-section-1"></section>
+            <section id="main-section-2"></section>
         </section>
-        <section id="main-section-2">
-
+        <section id="main-section">
+            <section id="main-section-1"></section>
+            <section id="main-section-2"></section>
         </section>
-    </section>
-    <section id="main-section">
-        <section id="main-section-1">
-
-        </section>
-        <section id="main-section-2">
-
-        </section>
-    </section>
-</body>
+    </body>
 
 </html>
